# gitlab-warden

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: config.rs  main.rs
